# mercurio-sysml

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cli-release.yml
crates/mercurio-kerml/: Cargo.toml
crates/mercurio-kerml/src/: compiler.rs  lib.rs  parser.rs
crates/mercurio-language-frontend/: Cargo.toml
crates/mercurio-language-frontend/src/: lib.rs  resolver.rs  transpile.rs
crates/mercurio-language-frontend/src/lowering/: collect.rs  elaborate.rs  emit.rs  imports.rs  indexes.rs  ir.rs  mappings.rs  mod.rs  names.rs  pilot_evidence.rs  policy.rs  resolve.rs  rules.rs  semantic_actions.rs  semantic_defaults.rs  semantic_properties.rs
crates/mercurio-requirements/: Cargo.toml
crates/mercurio-requirements/src/: lib.rs
crates/mercurio-simulation/: Cargo.toml
crates/mercurio-simulation-core/: Cargo.toml
crates/mercurio-simulation-core/src/: lib.rs
crates/mercurio-simulation/src/: legacy_overlay.rs  lib.rs
crates/mercurio-sysml/: Cargo.toml  build.rs
crates/mercurio-sysml-cli/: Cargo.toml
crates/mercurio-sysml-cli/src/: main.rs
crates/mercurio-sysml-simulation/: Cargo.toml
crates/mercurio-sysml-simulation/src/: lib.rs
crates/mercurio-sysml/src/: assessment.rs  authoring.rs  builder.rs  constraints.rs  embedded_resources.rs  lib.rs  metamodel.rs  mutation.rs  parser.rs  semantic_profile.rs  session.rs
crates/mercurio-sysml/src/behavior/: capability.rs  mod.rs  simulation.rs
crates/mercurio-tools/: Cargo.toml
crates/mercurio-tools/src/: lib.rs
crates/mercurio-tools/tests/: audit_lowering_tests.rs
docs/: README.md  crates.md  metamodels.md  resources.md  simulation-kir-profile.md  usage.md
resources/kernel/: kerml-kernel.kir.json
resources/language-profiles/sysml-2.0-pilot-0.57.0/mappings/: README.md  lowering_rules.seed.json
resources/metamodels/: registry.json
resources/metamodels/sysml-2.0-metamodel-0.57.0/: metamodel.json  profile.json  provenance.json
resources/metamodels/sysml-2.0-metamodel-0.57.0/mappings/: README.md  lowering_rules.seed.json  semantic_defaults.seed.json
resources/metamodels/sysml-2.0-metamodel-0.57.0/stdlib/: release.lock.json  source.lock.json  stdlib.rulepack.json
resources/stdlib-sources/sysml-2.0-pilot-0.57.0/: release.lock.json  stdlib.kir.json
tools/pilot-exporter/src/main/java/dev/mercurio/pilot/: PilotLoweringEvidenceExporter.java  PilotStdlibExporter.java
