[workspace]
members = [
    "crates/mercurio-language-frontend",
    "crates/mercurio-kerml",
    "crates/mercurio-sysml",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
