[workspace]
members = [
    "crates/mercurio-language-frontend",
    "crates/mercurio-kerml",
    "crates/mercurio-sysml",
    "crates/mercurio-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
