[workspace]
members = [
    "crates/mercurio-language-frontend",
    "crates/mercurio-kerml",
    "crates/mercurio-simulation-core",
    "crates/mercurio-sysml-simulation",
    "crates/mercurio-simulation",
    "crates/mercurio-sysml",
    "crates/mercurio-requirements",
    "crates/mercurio-tools",
    "crates/mercurio-sysml-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
