[package]
name = "mercurio-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-kir = { path = "../../../mercurio-foundation/crates/mercurio-kir" }
mercurio-language-contracts = { path = "../../../mercurio-foundation/crates/mercurio-language-contracts" }
mercurio-simulation-core = { path = "../../../mercurio-foundation/crates/mercurio-simulation-core" }
mercurio-sysml = { path = "../mercurio-sysml" }
mercurio-sysml-simulation = { path = "../mercurio-sysml-simulation" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
