[package]
name = "mercurio-sysml-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mercurio"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
mercurio-foundation = { path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-kerml = { path = "../mercurio-kerml" }
mercurio-sysml = { path = "../mercurio-sysml" }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zip.workspace = true

