[package]
name = "mercurio-sysml-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-simulation-core = { path = "../../../mercurio-foundation/crates/mercurio-simulation-core" }
mercurio-sysml = { path = "../mercurio-sysml" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
