[package]
name = "mercurio-sysml"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
embed-stdlib = []

[dependencies]
mercurio-kerml = { path = "../mercurio-kerml" }
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-kir = { path = "../../../mercurio-foundation/crates/mercurio-kir" }
mercurio-language-frontend = { path = "../mercurio-language-frontend" }
mercurio-language-contracts = { path = "../../../mercurio-foundation/crates/mercurio-language-contracts" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
