[package]
name = "mercurio-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[features]
legacy-pilot-tools = []

[[bin]]
name = "audit_pilot_corpus"
path = "src/bin/audit_pilot_corpus.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "compare_kerml_examples"
path = "src/bin/compare_kerml_examples.rs"

[[bin]]
name = "compare_pilot_ast"
path = "src/bin/compare_pilot_ast.rs"

[[bin]]
name = "compare_pilot_compile_errors"
path = "src/bin/compare_pilot_compile_errors.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "compare_pilot_semantics"
path = "src/bin/compare_pilot_semantics.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "check_repo_boundaries"
path = "src/bin/check_repo_boundaries.rs"

[[bin]]
name = "import_pilot_stdlib"
path = "src/bin/import_pilot_stdlib.rs"

[[bin]]
name = "inspect_connection"
path = "src/bin/inspect_connection.rs"

[[bin]]
name = "runtime_demo"
path = "src/bin/runtime_demo.rs"

[[bin]]
name = "generate_sample_views"
path = "src/bin/generate_sample_views.rs"

[[bin]]
name = "build_stdlib_release"
path = "src/bin/build_stdlib_release.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "audit_language_profile"
path = "src/bin/audit_language_profile.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "audit_lowering"
path = "src/bin/audit_lowering.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "export_pilot_lowering_evidence"
path = "src/bin/export_pilot_lowering_evidence.rs"
required-features = ["legacy-pilot-tools"]

[[bin]]
name = "verify_core_contracts"
path = "src/bin/verify_core_contracts.rs"

[[bin]]
name = "generate_language_baselines"
path = "src/bin/generate_language_baselines.rs"

[[bin]]
name = "derived_feature_burndown"
path = "src/bin/derived_feature_burndown.rs"

[[bin]]
name = "inspect_sysml_parse"
path = "src/bin/inspect_sysml_parse.rs"

[[bin]]
name = "parse_sysml_paths"
path = "src/bin/parse_sysml_paths.rs"

[[bin]]
name = "capability_probe"
path = "src/bin/capability_probe.rs"

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-kerml = { path = "../mercurio-kerml" }
mercurio-language-frontend = { path = "../mercurio-language-frontend" }
mercurio-requirements = { path = "../mercurio-requirements" }
mercurio-sysml = { path = "../mercurio-sysml" }
mercurio-views = { path = "../../../mercurio-adapter/crates/mercurio-views" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
zip.workspace = true
